refactor: Lottos 생성을 Lottos에게 양도 및 LottoSystem의 Controller 화