@@ -2,7 +2,6 @@ package lotto;
 
 import lotto.domain.*;
 import lotto.enums.Ranking;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
@@ -11,19 +10,13 @@ import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-public class LottoSystemTest {
-    LottoSystem lottoSystem;
-    @BeforeEach
-    void setUp() {
-        lottoSystem = new LottoSystem();
-    }
-
+public class LottoControllerTest {
     @Test
     void 돈_2500원으로_로또_구매_시_2장_구매_여부_테스트() {
         Money money = new Money(2500);
 
         money.checkManualLottoCount(0);
-        Lottos lottos = lottoSystem.buyAutoLottos(money, 0);
+        Lottos lottos = Lottos.buyRandomLottos(money, 0);
 
         assertThat(lottos.getSize()).isEqualTo(2);
     }
@@ -34,7 +27,7 @@ public class LottoSystemTest {
         List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
 
         lottoNumbers.add(numbers);
-        Lottos lottos = lottoSystem.buyManualLottos(lottoNumbers);
+        Lottos lottos = Lottos.buyManualLottos(lottoNumbers);
 
         assertThat(lottos.get(0).contain(Ball.of(1))).isTrue();
         assertThat(lottos.get(0).contain(Ball.of(2))).isTrue();
@@ -46,28 +39,13 @@ public class LottoSystemTest {
 
     @Test
     void 일등_이등_당첨_시_수익률_계산_테스트() {
-        LottoSystem lottoSystem = new LottoSystem();
         Money money = new Money(2000);
 
         money.checkManualLottoCount(0);
-        Lottos lottos = lottoSystem.buyAutoLottos(money, 0);
 
-        Lotto lotto1 = new Lotto(Arrays.asList(
-                Ball.of(1),
-                Ball.of(2),
-                Ball.of(3),
-                Ball.of(4),
-                Ball.of(5),
-                Ball.of(6)
-        ));
-        Lotto lotto2 = new Lotto(Arrays.asList(
-                Ball.of(1),
-                Ball.of(2),
-                Ball.of(3),
-                Ball.of(4),
-                Ball.of(5),
-                Ball.of(7)
-        ));
+        List<Integer> lotto1 = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> lotto2 = Arrays.asList(1, 2, 3, 4, 5, 7);
+
         WinningLotto winningLotto = new WinningLotto(
                 new Lotto(Arrays.asList(
                         Ball.of(1),
@@ -78,8 +56,8 @@ public class LottoSystemTest {
                         Ball.of(6)
                 )), Ball.of(7));
 
-        Lottos lottos1 = new Lottos(Arrays.asList(lotto1, lotto2));
-        Lottos lottos2 = new Lottos(new ArrayList<>());
+        Lottos lottos1 = Lottos.buyManualLottos(List.of(lotto1));
+        Lottos lottos2 = Lottos.buyManualLottos(List.of(lotto2));
 
         Result result = Result.scoreLottos(lottos1, lottos2, winningLotto);
         Profit profit = Profit.calculateProfit(result, money);
